--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,6 @@
 		"types": ["node"],
 		"typeRoots": ["./node_modules/@types", "./types", "./typechain-types"]
 	},
-	"include": ["./scripts", "./test", "./typechain", "./typechain-types", "./hardhat.config.ts", "./tasks", "./addresses.ts"],
+	"include": ["./scripts", "./test", "./typechain", "./typechain-types", "./hardhat.config.ts", "./tasks", "./networks.ts"],
 	"exclude": ["cache", "artifacts"]
 }
